# docs/openapi.json
@@ -580,7 +580,7 @@
           }
         ],
         "requestBody": {
-          "required": false,
+          "required": true,
           "content": {
             "application/json": {
               "schema": {
@@ -866,6 +866,52 @@
           },
           "403": {
             "description": "Unable to join an event not invited to."
+          }
+        }
+      }
+    },
+    "/api/events/{event_id}/color/": {
+      "patch": {
+        "summary": "Change event color. If you do not pass the request body, the colour value will be reset",
+        "tags": ["Events"],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "event_id",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "integer", "example": "1" }
+          }
+        ],
+        "requestBody": {
+          "required": false,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "color": { "type": "string", "pattern": "^#[0-9A-Fa-f]{6}$", "example": "#039BE5" }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful update."
+          },
+          "400": {
+            "description": "Validation failed."
+          },
+          "403": {
+            "description": "Unable to change the color of a event without an invitation."
+          },
+          "404": {
+            "description": "Event not found."
           }
         }
       }
